--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.qweex.FilePeon"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="0.01">
     <uses-sdk android:minSdkVersion="3" />
     <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher"
+                 android:icon="@drawable/logo"
                  android:configChanges="keyboard|keyboardHidden|orientation">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
