--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
+            Version 2, December 2004
+
+Copyright (C) 2013 Jon Petraglia <MrQweex@qweex.com>
+
+Everyone is permitted to copy and distribute verbatim or modified
+copies of this license document, and changing it is allowed as long
+as the name is changed.
+
+    DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
+TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
+
+0. You just DO WHAT THE FUCK YOU WANT TO.
+-->
+
+<!--
+This file is required for ALL Android applications. It contains basic information about the app.
+Most of this is standard stuff that will be in all AndroidManifest files. Things that are special will be marked with a '*'.
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.qweex.FilePeon"
           android:versionCode="1"
           android:versionName="0.01">
-    <uses-sdk android:minSdkVersion="3" />
-    <application android:label="@string/app_name"
-                 android:icon="@drawable/logo"
-                 android:configChanges="keyboard|keyboardHidden|orientation">
+    <!-- package == used on play and such, and in the device to identify the application
+         versionCode == internal integer used with the market; used to tell if there is a new update in the market
+         versionName == string to set the custom version of the release; shown on the market page & on the Application screen -->
+
+    <uses-sdk android:minSdkVersion="3" /> <!-- Identifies what versions of Android can run the app; setting this means
+                                                that using features available in higher apis will make it fail to compile -->
+
+    <application android:label="FilePeon"
+                 android:icon="@drawable/logo">
+    <!-- Configuration for the application itself, such as label & icon on the home screen -->
+
+        <!-- NOTE: All activities in your application MUST be declared in this XML or it will throw a runtime error. -->
         <activity android:name=".MainActivity"
-                  android:label="@string/app_name">
+                  android:label="FilePeon"
+                  android:configChanges="keyboard|keyboardHidden|orientation">
+        <!-- name == the name of the Activity; can start with a dot, for some reason
+             label == the string that will be shown in the status bar for this activity
+             *configChanges == when the activity should handle certain changes; goes to "onConfigurationChanged()" -->
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            <!-- Tells the home screen Launcher that it is the main activity,
+                 the one to be launched when the icon is clicked -->
+
+
         </activity>
     </application>
 </manifest>
